fix: remove auto dark mode

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -40,3 +40,8 @@
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica,
       Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
 }
+
+.markdown-body {
+    background-color: transparent !important;
+    color: #fff !important;
+}
